k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tourist-agency
  labels:
    name: tourist-agency
